--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,19 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="{{ site.lang }}" class="no-js"> <!--<![endif]-->
   <head>
       <title>{{ site.name }} - {{ site.description }}</title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta http-equiv="content-language" content="en-gb" />
+      <meta http-equiv="content-language" content="{{ site.lang }}" />
       <meta name="description" content="{{ site.description }}">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
+      <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css"> -->
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
       <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Site ATOM Feed">
+      <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
   </head>
 
   <body>
@@ -35,13 +37,16 @@
           <li><a target="_blank" href="http://twitter.com/{{ site.twitter }}">Twitter</a></li>
           {% endif %}
           {% if site.github %}
-          <li><a target="_blank" href="{{ site.github }}">Github</a></li>
+          <li><a target="_blank" href="https://github.com/{{ site.github }}">Github</a></li>
           {% endif %}
           {% if site.dribbble %}
           <li><a target="_blank" href="{{ site.dribbble }}">Dribbble</a></li>
           {% endif %}
           {% if site.instagram %}
           <li><a target="_blank" href="{{ site.instagram }}">Instagram</a></li>
+          {% endif %}
+          {% if site.googleplus %}
+          <li><a target="_blank" href="https://plus.google.com/{{ site.googleplus }}">Google+</a></li>
           {% endif %}
         </ul>
       </nav>
@@ -65,7 +70,7 @@
         <small>Powered by Jekyll - Theme: <a href="https://github.com/m3xm/hikari-for-Jekyll">hikari</a> - &copy; {{ site.author }}</small>
       </footer>
 
-    </div> 
+    </div>
     {% comment %} site-wrapper {% endcomment %}
 
     <script src="{{ site.baseurl }}/js/main.js"></script>
