--- a/_scss/partials/_header.scss
+++ b/_scss/partials/_header.scss
@@ -1,23 +1,23 @@
 header {
   width: 100%;
-  background: white;
+  background: $primary-color;
 }
 
 .h-wrap {
   @extend %padding-large;
-  
+
   h1.title {
     @extend h3;
     display: inline-block;
     margin: 0;
     padding: 0;
-    font-weight: normal;
+    font-weight: bold;
     a {
-      color: $text-color;
+      color: white;
       text-decoration: none;
-      &:hover {
-        color: $link-color;
-      }
+      // &:hover {
+      //   color: $link-color;
+      // }
     }
   } // end h1.title
 
@@ -27,14 +27,14 @@ header {
       transition:         background .3s 0s ease;
       background: transparent;
 
-      &::before, 
+      &::before,
       &::after {
         top:0;
         width: 30px;
-        -webkit-transition: top .3s ease, 
-                            transform .3s .5s ease;   
-        transition:         top .3s ease, 
-                            transform .3s .5s ease; 
+        -webkit-transition: top .3s ease,
+                            transform .3s .5s ease;
+        transition:         top .3s ease,
+                            transform .3s .5s ease;
       }
 
       &::before {
@@ -63,7 +63,7 @@ header {
   &:hover {
     opacity: 1;
   }
-  
+
   .lines {
     display: inline-block;
     position: relative;
@@ -81,7 +81,7 @@ header {
       width: 25px;
       height: 2px;
       background: $text-color;
-      border-radius: 20px; 
+      border-radius: 20px;
 
       transition: all .3s ease;
       -webkit-transition: all .3s ease;
@@ -104,7 +104,7 @@ header {
       }
     }
   } // .lines
-  
+
 } // end .menu-icon
 
 
@@ -161,7 +161,7 @@ header {
     display: block;
     h1 {
       @extend h3;
-      margin: 0; 
+      margin: 0;
     }
     p {
       font-size: 90%;
