--- a/_scss/base/_global.scss
+++ b/_scss/base/_global.scss
@@ -15,8 +15,8 @@ html {
 
 body {
   font: $font-size-l $font-family;
-  color: $text-color;
   text-rendering: optimizeLegibility;
+  color: $text-primary;
   -webkit-font-smoothing: antialiased;
   background-color: $bg-color;
   @media (max-width: 942px) {
@@ -56,10 +56,10 @@ h3 {
 h4 {
   font-size: 80%;
   font-weight: bold;
+  color: $text-secondary;
   text-transform: uppercase;
   letter-spacing: 3px;
   margin: $spacing-l 0 $spacing-xs;
-  color: lighten($text-color, 40%);
 }
 
 h5 {
@@ -85,8 +85,8 @@ ul li { list-style-type: circle; }
 ol li { list-style-type: decimal; }
 
 a {
-  color: $link-color;
+  color: $primary;
   &:hover {
-    color: $text-color;
+    color: darken($primary, 20%);
   }
 }
