--- a/_scss/components/_syntax.scss
+++ b/_scss/components/_syntax.scss
@@ -1,7 +1,7 @@
 // Solarized Light Pygments CSS / Jekyll
 // https://gist.github.com/edwardhotchkiss/2005058
 
-.highlight { 
+.highlight {
   border: 1px solid $border-color;
   border-radius: 3px;
   padding: $spacing-s $spacing-s;
@@ -9,15 +9,15 @@
   font-size: 80%;
   margin: $spacing-m auto;
   overflow: scroll;
-  color: lighten($text-color, 30%);
+  color: $text-secondary;
 }
- 
+
 code {
   font-family: 'Courier', monospace;
   font-size: 100%;
   line-height: 1.5;
 }
- 
+
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: #93A1A1 } /* Error */
 .highlight .g { color: #93A1A1 } /* Generic */
