--- a/_scss/pages/_home.scss
+++ b/_scss/pages/_home.scss
@@ -3,10 +3,10 @@
   li {
     display: inline-block;
     width: 100%;
-    border-bottom: 1px solid darken($control-color, 6%);
+    border-bottom: 1px solid $border-color;
 
     &:first-child {
-      border-top: 1px solid darken($control-color, 6%);
+      border-top: 1px solid $border-color;
     }
 
     .p-wrap {
@@ -14,10 +14,10 @@
       background: white;
       transition: all .15s ease-in;
       &:active {
-        background: darken($accent-color, 3%);
+        background: $accent;
       }
       &:hover {
-        background: lighten($accent-color, 3%);
+        background: $accent-light;
         padding-left: $spacing-m + $spacing-s;
         &::after {
           content:'\2192';
@@ -38,7 +38,7 @@
     } // end .p-wrap
 
     time {
-      color: darken($main-color, 20%);
+      color: $text-secondary;
       padding-right: $spacing-s;
       @media (max-width: 942px) {
         display: block;
@@ -46,7 +46,7 @@
     }
 
     a {
-      color: $main-color;
+      color: $primary-dark;
       text-decoration: none;
     }
 
@@ -56,7 +56,7 @@
 .pagination {
   overflow: hidden;
   margin-top: 40px;
-  color: lighten($text-color, 60%);
+  color: $text-secondary;
   text-align: center;
   border: 1px solid $border-color;
 
@@ -75,6 +75,6 @@
 
   a:hover {
       text-decoration: none;
-      background-color: darken($smoke-color, 5%);
+      background-color: $accent-light;
   }
 } // end .pagination
