--- a/_scss/pages/_posts.scss
+++ b/_scss/pages/_posts.scss
@@ -10,7 +10,11 @@
   z-index: 1;
 
   .single-content {
-    padding: 0 $spacing-m $spacing-l;
+    padding: 0 $spacing-m $spacing-m;
+    @media (min-width: 942px) {
+      margin-top: -48px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    }
   }
 
   .feat {
