--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,7 @@
 // Components
 @import 'components/icons';
 @import 'components/syntax';
+@import 'components/addthis';
 
 // Partials
 @import 'partials/header';
