--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,20 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="{{ site.lang }}" class="no-js"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html lang="{{ site.lang }}" class="no-js" prefix="og: http://ogp.me/ns#"> <!--<![endif]-->
   <head>
-      <title>{{ site.name }} - {{ site.description }}</title>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <meta http-equiv="content-language" content="{{ site.lang }}" />
-      <meta name="description" content="{{ site.description }}">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+      {% if page.is_blog %}
+        {% include meta_post.html %}
+      {% else %}
+        {% include meta_default.html %}
+      {% endif %}
+
       <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
-      <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700|Lora:400,700,400italic" rel="stylesheet" type="text/css"> -->
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
       <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Site ATOM Feed">
       <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
@@ -87,9 +91,11 @@
       </script>
     {% endif %}
 
-    {% comment %} AddThis {% endcomment %}
-    {% if site.addthis_pubid %}
-      <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_pubid }}" async="async"></script>
+    {% if page.is_blog %}
+      {% comment %} AddThis {% endcomment %}
+      {% if site.addthis_pubid %}
+        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_pubid }}" async="async"></script>
+      {% endif %}
     {% endif %}
 
   </body>
