--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,10 +15,18 @@
         {% include meta_default.html %}
       {% endif %}
 
+      <title>{% if page.title %} {{ page.title }} | {% endif %}{{ site.name }}</title>
       <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
       <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Site ATOM Feed">
       <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
+
+      {% if page.is_blog %}
+        {% include link_post.html %}
+      {% else %}
+        {% include link_default.html %}
+      {% endif %}
+
   </head>
 
   <body>
@@ -89,13 +97,6 @@
         ga('create', '{{ site.ga_tracking_id }}', '{{ site.ga_domain }}');
         ga('send', 'pageview');
       </script>
-    {% endif %}
-
-    {% if page.is_blog %}
-      {% comment %} AddThis {% endcomment %}
-      {% if site.addthis_pubid %}
-        <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid={{ site.addthis_pubid }}" async="async"></script>
-      {% endif %}
     {% endif %}
 
   </body>
