--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -4,6 +4,7 @@ layout: default
 
 <div id="home">
   {% if site.tags[page.tag] %}
+  <div class="label">#{{ site.data.tags[page.tag].name }}</div>
   <ul class="posts">
     {% for post in site.tags[page.tag] %}
     <li itemscope itemtype="http://schema.org/BlogPosting">
