--- a/_scss/pages/_home.scss
+++ b/_scss/pages/_home.scss
@@ -1,3 +1,9 @@
+.label {
+    padding: $spacing-s $spacing-m;
+    background: white;
+    color: $text-hint;
+}
+
 .posts {
   overflow: hidden;
   li {
