--- a/_scss/pages/_home.scss
+++ b/_scss/pages/_home.scss
@@ -2,6 +2,10 @@
     padding: $spacing-s $spacing-m;
     background: white;
     color: $text-hint;
+
+    a {
+      text-decoration: none;
+    }
 }
 
 .posts {
