--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,6 +62,13 @@
           {% endif %}
         </ul>
       </nav>
+      <nav>
+        <h6>Blog</h6>
+        <ul>
+          <li><a href="{{ site.baseurl }}/">Home</a></li>
+          <li><a href="{{ site.baseurl }}/tags/">Tags</a></li>
+        </ul>
+      </nav>
     </div>
 
 
