--- a/_scss/pages/_posts.scss
+++ b/_scss/pages/_posts.scss
@@ -101,6 +101,28 @@
     height: 100%;
   }
 
+  .page-tags {
+    margin: 0 0 $spacing-s 0;
+
+    li {
+      display: inline-block;
+      padding: $spacing-xs $spacing-s;
+      background: $accent;
+      border-radius: 2px;
+      -webkit-border-radius: 2px;
+      -moz-border-radius: 2px;
+    }
+
+    a {
+      color: $text-secondary;
+      text-decoration: none;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
+
 
 } // end #single-wrap
 
@@ -110,7 +132,7 @@
 #next {
   position: fixed;
   text-decoration: none;
-  background: $accent;
+  //background: $accent;
   border: 1px solid $border-color;
   padding: $spacing-xs;
   line-height: 1;
