--- a/_scss/base/_global.scss
+++ b/_scss/base/_global.scss
@@ -34,6 +34,7 @@ h4,
 h5,
 h6 {
   font-family: 'Noto Sans Japanese', sans-serif;
+  color: $primary;
 }
 
 h1 {
@@ -56,7 +57,6 @@ h3 {
 h4 {
   font-size: 80%;
   font-weight: bold;
-  color: $text-secondary;
   text-transform: uppercase;
   letter-spacing: 3px;
   margin: $spacing-l 0 $spacing-xs;
