--- a/_scss/base/_variables.scss
+++ b/_scss/base/_variables.scss
@@ -6,9 +6,9 @@ $primary-light:     #b2ebf2; //Cyan 100
 $accent:            #eeff41; //Lime A200
 $accent-light:      #f4ff81; //Lime A100
 
-$text-primary:      rgba(black, 0.87);
-$text-secondary:    rgba(black, 0.54);
-$text-hint:         rgba(black, 0.26);
+$text-primary:      rgba(black, 0.87); //Black 87%
+$text-secondary:    rgba(black, 0.54); //Black 54%
+$text-hint:         rgba(black, 0.26); //Black 26%
 
 $bg-color:          #f9f9f9;
 $border-color:      rgba(black, 0.12);
