--- a/_scss/pages/_posts.scss
+++ b/_scss/pages/_posts.scss
@@ -99,6 +99,7 @@
   img {
     width: 100%;
     height: 100%;
+    background: $accent;
   }
 
   .page-tags {
@@ -111,6 +112,7 @@
 
     a {
       padding: $spacing-s $spacing-s;
+      color: $primary;
       border: 1px solid $primary;
       border-radius: 2px;
       -webkit-border-radius: 2px;
@@ -118,12 +120,17 @@
       text-decoration: none;
 
       &:hover {
+        color: $primary-dark;
         border: 1px solid $primary-dark;
       }
-
     }
-  }
 
+    a.disabled {
+      color: $primary-light;
+      border: 1px solid $primary-light;
+    }
+
+  }
 
 } // end #single-wrap
 
