Revert "Change menu absoute to fixed"
This reverts commit 75ac31fbd5baee0e3d1b140bb64f6d690891b2ac.

--- a/_scss/partials/_header.scss
+++ b/_scss/partials/_header.scss
@@ -52,7 +52,7 @@ header {
 
 .menu-icon {
   @extend %padding-large;
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   cursor: pointer;
