--- a/css/main.scss
+++ b/css/main.scss
@@ -11,11 +11,11 @@
 // Base
 @import 'base/reset';
 @import 'base/variables';
+@import 'base/your_font_family';
 @import 'base/utilities';
 @import 'base/global';
 
 // Components
-@import 'components/icons';
 @import 'components/syntax';
 
 // Partials
