Update bio and Fix tag size style

--- a/_scss/pages/_home.scss
+++ b/_scss/pages/_home.scss
@@ -61,7 +61,7 @@
     }
 
     .badge {
-      font-size: 75%;
+      //font-size: 75%;
       margin-left: $spacing-xs;
       padding: $spacing-xs $spacing-xs;
       border: 1px solid $primary;
