Change name to materi

--- a/_includes/link_your_font.html
+++ b/_includes/link_your_font.html
@@ -1,2 +1,2 @@
-{% comment %} Webfont https://www.google.com/fonts {% endcomment %}
+{% comment %} Webfont http://www.google.com/fonts/earlyaccess {% endcomment %}
 <link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
