--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
       </main>
 
       <footer>
-        <small>Powered by Jekyll - Theme: <a href="https://github.com/m3xm/hikari-for-Jekyll">hikari</a> - &copy; {{ site.author }}</small>
+        <small>Powered by Jekyll - Theme: <a href="https://github.com/ogaclejapan/materi-for-jekyll">materi for jekyll</a> - &copy; {{ site.author }}</small>
       </footer>
 
     </div>
