Change font size and Add 404 page, Move tag index file

--- a/_scss/partials/_header.scss
+++ b/_scss/partials/_header.scss
@@ -172,6 +172,7 @@ header {
   nav {
 
     h6 {
+      font-size: 80%;
       text-align: left;
       margin-top: $spacing-m;
       margin-bottom: $spacing-s;
