--- a/_scss/base/_global.scss
+++ b/_scss/base/_global.scss
@@ -33,29 +33,28 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Noto Sans Japanese', sans-serif;
+  font-family: $font-family;
   color: $primary;
 }
 
 h1 {
-  font-size: 250%;
+  font-size: 150%;
   margin: $spacing-xs 0;
 }
 
 h2 {
-  font-size: 180%;
+  font-size: 120%;
   font-style: italic;
   margin: $spacing-s 0 $spacing-xs;
 }
 
 h3 {
-  font-size: 150%;
-  font-weight: lighter;
+  font-size: 120%;
   margin: $spacing-sm 0 $spacing-xs;
 }
 
 h4 {
-  font-size: 80%;
+  font-size: 100%;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 3px;
