--- a/_scss/pages/_posts.scss
+++ b/_scss/pages/_posts.scss
@@ -98,6 +98,12 @@
     background: $accent;
   }
 
+  img.fixed {
+    width: auto;
+    height: auto;
+    background: none;
+  }
+
   .page-tags {
     margin: 0 0 $spacing-s 0;
     padding: $spacing-s 0;
