--- a/_scss/pages/_posts.scss
+++ b/_scss/pages/_posts.scss
@@ -63,6 +63,23 @@
     margin: 0 0 $spacing-m;
   }
 
+  h2 {
+    font-style: normal;
+  }
+
+  h3 {
+    font-weight: bold;
+    @media (min-width: 643px) {
+      border-left: $spacing-xs solid $primary-light;
+      padding-left: $spacing-xs;
+    }
+  }
+
+  h4 {
+    font-weight: bold;
+    text-transform: none;
+  }  
+
   ul,
   ol {
     margin: 0 0 0 2em;
