--- a/_scss/partials/_header.scss
+++ b/_scss/partials/_header.scss
@@ -11,6 +11,7 @@ header {
     display: inline-block;
     margin: 0;
     padding: 0;
+    font-size: 150%;
     font-weight: bold;
     a {
       color: white;
