Add post h1 border-bottom

--- a/_scss/pages/_posts.scss
+++ b/_scss/pages/_posts.scss
@@ -54,6 +54,11 @@
     margin: $spacing-l auto;
   }
 
+  h1 {
+    padding-bottom: $spacing-xs * 0.5;
+    border-bottom: 2px solid $primary-light;
+  }
+
   h1.page-title {
     font-size: 180%;
     line-height: 135%;
@@ -61,6 +66,8 @@
     color: $primary-dark;
     text-align: center;
     margin: 0 0 $spacing-m;
+    padding-bottom: 0;
+    border-bottom: none;
   }
 
   h2 {
@@ -78,7 +85,7 @@
   h4 {
     font-weight: bold;
     text-transform: none;
-  }  
+  }
 
   ul,
   ol {
