--- a/_scss/components/_syntax.scss
+++ b/_scss/components/_syntax.scss
@@ -5,10 +5,9 @@
   border: 1px solid $border-color;
   border-radius: 3px;
   padding: $spacing-s $spacing-s;
-  background-color: $smoke-color;
-  font-size: 80%;
+  background-color: white;
   margin: $spacing-m auto;
-  overflow: scroll;
+  //overflow: scroll;
   color: $text-secondary;
 }
 
