--- a/_includes/link_your_font.html
+++ b/_includes/link_your_font.html
@@ -1,2 +1,2 @@
-{% comment %} Webfont http://www.google.com/fonts/earlyaccess {% endcomment %}
-<link rel="stylesheet" href="//fonts.googleapis.com/earlyaccess/notosansjapanese.css">
+{% comment %} Webfont https://www.google.com/fonts {% endcomment %}
+<link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic,700italic|Noto+Sans:400,700,400italic,700italic|Ubuntu:300,400,700,400italic' rel='stylesheet' type='text/css'>
