--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <title>{% if page.title %} {{ page.title }} | {% endif %}{{ site.name }}</title>
       {% include link_your_font.html %}
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
-      <link href="atom.xml" type="application/atom+xml" rel="alternate" title="Site ATOM Feed">
+      <link href="{{ site.url }}{{ site.baseurl }}/feed.xml" type="application/rss+xml" rel="alternate" title="RSS2.0">
       <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
 
       {% if page.is_blog %}
@@ -63,14 +63,13 @@
         </ul>
       </nav>
       <nav>
-        <h6>Blog</h6>
+        <h6>Link</h6>
         <ul>
           <li><a href="{{ site.baseurl }}/">Home</a></li>
           <li><a href="{{ site.baseurl }}/tags/">Tags</a></li>
         </ul>
       </nav>
     </div>
-
 
     <div class="site-wrapper">
 
