--- a/_scss/base/_your_font_family.scss
+++ b/_scss/base/_your_font_family.scss
@@ -1,4 +1,4 @@
 //Webfont https://www.google.com/fonts
-$font-family:       'Noto Sans Japanese', sans-serif;
-$variant-family:    'Noto Sans Japanese', Georgia, serif;
-$code-family:       'Courier', monospace;
+$font-family:       'Ubuntu', Arial, Helvetica, sans-serif;
+$variant-family:    'Noto Sans', Arial, Helvetica, sans-serif;
+$code-family:       'Ubuntu Mono', "Courier New", Courier, monospace;
