--- a/_scss/pages/_posts.scss
+++ b/_scss/pages/_posts.scss
@@ -55,14 +55,14 @@
   }
 
   h1 {
-    padding-bottom: $spacing-xs * 0.5;
-    border-bottom: 2px solid $primary-light;
+    font-weight: normal;
   }
 
   h1.page-title {
-    font-size: 180%;
     line-height: 135%;
     font-family: $font-family;
+    font-size: 180%;
+    font-weight: bold;;
     color: $primary-dark;
     text-align: center;
     margin: 0 0 $spacing-m;
@@ -71,12 +71,15 @@
   }
 
   h2 {
-    font-style: normal;
+    padding-bottom: $spacing-xs * 0.5;
+    border-bottom: 2px solid $primary-light;
   }
 
   h3 {
+    font-style: normal;
     font-weight: bold;
     @media (min-width: 643px) {
+      font-style: normal;
       border-left: $spacing-xs solid $primary-light;
       padding-left: $spacing-xs;
     }
@@ -129,8 +132,12 @@
   }
 
   .page-tags {
-    margin: 0 0 $spacing-s 0;
-    padding: $spacing-s 0;
+    padding: $spacing-m 0 $spacing-sm;
+
+    ul {
+      margin: 0;
+      padding: 0;
+    }
 
     li {
       display: inline-block;
@@ -157,6 +164,19 @@
     }
 
   } // end .post-tags
+
+  .back-to-top {
+    margin: 0 0 $spacing-l;
+
+    a {
+      color: $text-secondary;
+
+      &:hover {
+        color: $text-primary;
+      }
+    }
+
+  } // end .back-to-top
 
 } // end #single-wrap
 
