--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,10 @@
       {% endif %}
 
       <title>{% if page.title %} {{ page.title }} | {% endif %}{{ site.name }}</title>
+      <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
       {% include link_your_font.html %}
+
       <link rel="stylesheet" type="text/css" href="{{ site.baseurl| split: '/' | join:'/' }}/css/main.css" />
       <link href="{{ site.url }}{{ site.baseurl }}/feed.xml" type="application/rss+xml" rel="alternate" title="RSS2.0">
       <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
@@ -93,14 +96,14 @@
 
     <script src="{{ site.baseurl }}/js/main.js"></script>
     {% comment %} Google Analytics {% endcomment %}
-    {% if site.ga_tracking_id and site.ga_domain %}
+    {% if site.ga_tracking_id %}
       <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-        ga('create', '{{ site.ga_tracking_id }}', '{{ site.ga_domain }}');
+        ga('create', '{{ site.ga_tracking_id }}', 'auto');
         ga('send', 'pageview');
       </script>
     {% endif %}
